--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
    <application
-        android:label="lmiis"
+        android:label="Shramsansar"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
