--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   http: ^0.13.5
   intl: ^0.17.0
   flutter_riverpod: ^2.1.1
+  shimmer: ^2.0.0
+  cached_network_image: ^3.2.3
 
 
 
