--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,8 +70,8 @@ android {
    }
    buildTypes {
        release {
-        //    signingConfig signingConfigs.release
-              signingConfig signingConfigs.debug
+           signingConfig signingConfigs.release
+            //   signingConfig signingConfigs.debug
        }
    }
 }
